[package]
name = "bsv"
version = "0.3.7"
edition = "2021"
license = "MIT"
description = "A terminal UI for viewing Beads issues"
repository = "https://github.com/bglenden/bsv"
keywords = ["tui", "beads", "issues", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
notify = "6.1"
